--- a/Predicting_the_Percentage_Score_of_a_Student_based_on_Study_Hours.ipynb
+++ b/Predicting_the_Percentage_Score_of_a_Student_based_on_Study_Hours.ipynb
@@ -36,7 +36,7 @@
         "\n",
         "**Name : Ridwanul Hoque** 👶\n",
         "\n",
-        "### **Task 01: Prediction using Supervised Machine Learnig Algorithm** 🔰\n",
+        "### **Task 01: Prediction using Supervised Machine Learning Algorithm** 🔰\n",
         "\n",
         "---\n",
         "\n",
